--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 		</div>
 	</div>
 
-	<section id="on-tap">
+	<!--section id="on-tap">
 		<div class="flex">
 			<div class="g1-flex4 g2-flex6 g3-flex12">
 				<div class="on-tap-buttons-wrap">
@@ -113,5 +113,5 @@
 				<h2 class="subfont delta center">Robin Richards &middot; President, Happy Lager</h2>
 			</div>
 		</div>
-	</section>
+	</section-->
 {% endblock %}
