updating header and nav

--- a/templates/_layouts/site.html
+++ b/templates/_layouts/site.html
@@ -36,7 +36,7 @@
 
 
 {% block body %}
-	<div id="bar">
+	<!-- <div id="bar">
 		<div class="flex">
 			<div class="g1-flex4 g2-flex6 g3-flex12">
 				<div id="social">
@@ -51,7 +51,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<header id="header">
 		<div class="flex">
