--- a/templates/index.html
+++ b/templates/index.html
@@ -20,12 +20,11 @@
 
 		<div class="hero-info">
 			<h1>Welcome to ixlab<br>
-				<span class="ir">Half Full</span>
 			</h1>
-			<p class="center reverse">Work with Happy Lager and you will find an endless<br>
+			<!-- <p class="center reverse">Work with Happy Lager and you will find an endless<br>
 				tap of ideas, wit and creativity.
-			</p>
-			<p class="center"><a href="mailto:hi@happylager.dev" class="hero-cta">Join Us</a></p>
+			</p> -->
+			<!-- <p class="center"><a href="mailto:hi@happylager.dev" class="hero-cta">Join Us</a></p> -->
 		</div>
 	</div>
 
