--- a/templates/_layouts/site.html
+++ b/templates/_layouts/site.html
@@ -18,8 +18,8 @@
 {# Define the site navigation #}
 {% set nav = {
 	about:    { title: "About Us", desc: "The Lab" },
-	services: { title: "People", desc: "We don't bite" },
-	work:     { title: "Research", desc: "Our Work" },
+	services: { title: "People", desc: "The Brains" },
+	work:     { title: "Research", desc: "Awesome Projects" },
 	news:     { title: "Announcements", desc: "News n More" }
 } %}
 
