--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
 		<div class="flex">
 			<div class="g1-flex4 g2-flex6 g3-flex10 g3-offset1">
 					<hr class="horz-rule alt">
-					<a class="button-w-icon alt icon-beaker" href="{{ url('about') }}">How it’s made</a>
+					<a class="button-w-icon alt icon-people" href="{{ url('about') }}">How it’s made</a>
 			</div>
 		</div>
 		<div class="flex">
