--- a/templates/_layouts/site.html
+++ b/templates/_layouts/site.html
@@ -56,7 +56,7 @@
 	<header id="header">
 		<div class="flex">
 			<div class="g1-flex4 g2-flex6 g3-flex12">
-				<h1 id="ixlogo"><a href="{{ siteUrl }}"><img src="{{ alias('@web/assets/images/ixlab.svg') }}" width="300" height="125" alt="Happy Lager - Enjoying Every Bit - Since 2006"></a></h1>
+				<h1><a href="{{ siteUrl }}"><img src="{{ alias('@web/assets/images/ixlab.svg') }}" width="300" height="125" alt="Happy Lager - Enjoying Every Bit - Since 2006"></a></h1>
 				<nav>
 					<ul>
 						{% for slug, item in nav %}
@@ -64,7 +64,7 @@
 								<a href="{{ url(slug) }}" {% if craft.app.request.segments|first == slug %}class="sel"{% endif %}>
 									<strong>{{ item.title }}</strong>
 									<span>-</span>
-									<em>{{ item.desc }}</em>
+									<!-- <em>{{ item.desc }}</em> -->
 								</a>
 							</li>
 						{% endfor %}
@@ -79,7 +79,7 @@
 	</main>
 
 	<footer id="footer">
-		<div class="flex">
+		<!-- <div class="flex">
 			<div class="g1-flex4 g2-flex3 g3-flex6">
 				<img src="{{ alias('@web/assets/images/hl.svg') }}" width="76" height="76" alt="H.L.">
 				<p class="copyright">{{ footer.copyrightNotice|replace('{year}', now|date('Y')) }}</p>
@@ -87,6 +87,6 @@
 			<div class="g1-flex4 g2-flex3 g3-flex6">
 				<a class="contact" href="mailto:{{ footer.email }}">{{ footer.contactUsLabel }}</a>
 			</div>
-		</div>
+		</div> -->
 	</footer>
 {% endblock %}
